# JUCIII

./: CMakeLists.txt  main.cpp  somejuice.cpp  trashukjuice.cpp
tests/: CMakeLists.txt  tests.cc
